# internal/mods/resource/dal/application.dal.go
@@ -30,6 +30,12 @@ func (a *Application) Query(ctx context.Context, params schema.ApplicationQueryP
 	if v := params.LikeName; len(v) > 0 {
 		db = db.Where("name LIKE ?", "%"+v+"%")
 	}
+	if v := params.UserID; len(v) > 0 {
+		permQuery := GetDataPermissionDB(ctx, a.DB).
+			Where("type = ? AND user = ? AND tenant = ? AND permission & 1 = 1", schema.DataPermissionTypeApplication, v, params.Tenant).
+			Select("data_id")
+		db = db.Where("id IN (?)", permQuery)
+	}
 
 	var list schema.Applications
 	pageResult, err := util.WrapPageQuery(ctx, db, params.PaginationParam, opt.QueryOptions, &list)
