# internal/swagger/swagger.json
@@ -3622,6 +3622,263 @@
                 }
             }
         },
+        "/api/v1/resource/data-permissions": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "DataPermissionAPI"
+                ],
+                "summary": "Query data permission list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/util.ResponseResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/schema.DataPermission"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "DataPermissionAPI"
+                ],
+                "summary": "Create data permission record",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.DataPermissionForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/util.ResponseResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schema.DataPermission"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/resource/data-permissions/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "DataPermissionAPI"
+                ],
+                "summary": "Get data permission record by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "unique id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/util.ResponseResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schema.DataPermission"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "DataPermissionAPI"
+                ],
+                "summary": "Update data permission record by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "unique id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.DataPermissionForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "DataPermissionAPI"
+                ],
+                "summary": "Delete data permission record by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "unique id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ResponseResult"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/resource/service-aliases": {
             "get": {
                 "security": [
@@ -5411,7 +5668,8 @@
             "required": [
                 "enhance",
                 "name",
-                "source"
+                "source",
+                "tenant"
             ],
             "properties": {
                 "alias": {
@@ -5438,6 +5696,11 @@
                 },
                 "source": {
                     "description": "Data source: Local, JSF, JDAP",
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "tenant": {
+                    "description": "Tenant",
                     "type": "string",
                     "maxLength": 255
                 }
@@ -5520,6 +5783,92 @@
                 "captcha_id": {
                     "description": "Captcha ID",
                     "type": "string"
+                }
+            }
+        },
+        "schema.DataPermission": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "description": "Create timestamp",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "Creator",
+                    "type": "string"
+                },
+                "dataId": {
+                    "description": "Data ID",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "Unique ID",
+                    "type": "string"
+                },
+                "permission": {
+                    "description": "Data permission bits - format(read,write,delete)",
+                    "type": "integer"
+                },
+                "role": {
+                    "description": "Role code",
+                    "type": "string"
+                },
+                "tenant": {
+                    "description": "Tenant",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "Data type (table name)",
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "description": "Update timestamp",
+                    "type": "string"
+                },
+                "user": {
+                    "description": "User",
+                    "type": "string"
+                }
+            }
+        },
+        "schema.DataPermissionForm": {
+            "type": "object",
+            "required": [
+                "dataId",
+                "role",
+                "tenant",
+                "type",
+                "user"
+            ],
+            "properties": {
+                "dataId": {
+                    "description": "Data ID",
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "permission": {
+                    "description": "Data permission bits - format(read,write,delete)",
+                    "type": "integer"
+                },
+                "role": {
+                    "description": "Role code",
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "tenant": {
+                    "description": "Tenant",
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "type": {
+                    "description": "Data type (table name)",
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "user": {
+                    "description": "User",
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
@@ -7321,10 +7670,6 @@
         "schema.Service": {
             "type": "object",
             "properties": {
-                "collaborator": {
-                    "description": "Collaborator list",
-                    "type": "string"
-                },
                 "created_at": {
                     "description": "Create time",
                     "type": "string"
@@ -7444,17 +7789,14 @@
                 "name",
                 "registration_type",
                 "source",
-                "space_code"
+                "space_code",
+                "tenant"
             ],
             "properties": {
                 "application_id": {
                     "description": "Application ID",
                     "type": "string",
                     "maxLength": 20
-                },
-                "collaborator": {
-                    "description": "Collaborator list",
-                    "type": "string"
                 },
                 "description": {
                     "description": "Description",
@@ -7481,6 +7823,11 @@
                 },
                 "space_code": {
                     "description": "Space code",
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "tenant": {
+                    "description": "Tenant",
                     "type": "string",
                     "maxLength": 255
                 }
